# stratum

./: .env.example  .gitignore  Anchor.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/orderbook-cranker/: package.json  tsconfig.json
app/orderbook-cranker/src/: cranker.ts  index.ts  matcher.ts  order-store.ts  settlement.ts  types.ts
apps/orderbook-cranker/: package.json
contracts/solana/: package.json
migrations/: deploy.ts
programs/airdrop-example/: Cargo.toml
programs/airdrop-example/src/: lib.rs
programs/stratum/: Cargo.toml
programs/stratum-orderbook/: Cargo.toml
programs/stratum-orderbook/src/: errors.rs  events.rs  lib.rs  matching.rs  state.rs
programs/stratum/src/: bitfield.rs  errors.rs  events.rs  expiry.rs  lib.rs  merkle.rs  resurrection.rs
sdk/: README.md  package.json  tsconfig.json
sdk/src/: bitfield.test.ts  bitfield.ts  index.ts  merkle.test.ts  merkle.ts  orderbook.ts
tests/: stratum.ts
